[gd_scene load_steps=3 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://addons/godot-loopring-sdk/tests/NftInfo.gd" type="Script" id=2]

[node name="NftInfo" type="PanelContainer"]
margin_right = 360.0
margin_bottom = 392.0
rect_min_size = Vector2( 360, 392 )
script = ExtResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 353.0
margin_bottom = 385.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 16
custom_constants/margin_top = 16
custom_constants/margin_left = 16
custom_constants/margin_bottom = 16

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
margin_left = 16.0
margin_top = 16.0
margin_right = 330.0
margin_bottom = 362.0
rect_min_size = Vector2( 314, 160 )
custom_constants/separation = 16

[node name="NftImage" type="TextureRect" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
margin_right = 128.0
margin_bottom = 346.0
rect_min_size = Vector2( 128, 128 )
texture = ExtResource( 1 )

[node name="InfoScrollContainer" type="ScrollContainer" parent="MarginContainer/HBoxContainer"]
margin_left = 144.0
margin_right = 314.0
margin_bottom = 346.0
size_flags_horizontal = 3
scroll_horizontal_enabled = false

[node name="InfoContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/InfoScrollContainer"]
margin_right = 170.0
margin_bottom = 90.0
size_flags_horizontal = 3
custom_constants/separation = 16

[node name="Name" type="Label" parent="MarginContainer/HBoxContainer/InfoScrollContainer/InfoContainer"]
unique_name_in_owner = true
margin_right = 170.0
margin_bottom = 14.0
text = "Name of NFT"
autowrap = true

[node name="Description" type="Label" parent="MarginContainer/HBoxContainer/InfoScrollContainer/InfoContainer"]
unique_name_in_owner = true
margin_top = 30.0
margin_right = 170.0
margin_bottom = 44.0
text = "Description:"
autowrap = true

[node name="AttributesLabel" type="Label" parent="MarginContainer/HBoxContainer/InfoScrollContainer/InfoContainer"]
unique_name_in_owner = true
margin_top = 60.0
margin_right = 170.0
margin_bottom = 74.0
text = "Attributes:"
autowrap = true

[node name="AttributesList" type="VBoxContainer" parent="MarginContainer/HBoxContainer/InfoScrollContainer/InfoContainer"]
unique_name_in_owner = true
margin_top = 90.0
margin_right = 170.0
margin_bottom = 90.0
custom_constants/separation = 12
